--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "testing-library/prefer-screen-queries": "off"
+    }
   },
   "browserslist": {
     "production": [
@@ -38,6 +41,9 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.32.1",
-    "playwright-msw": "^2.2.1"
+    "@types/react": "^18.0.35",
+    "@types/react-dom": "^18.0.11",
+    "playwright-msw": "^2.2.1",
+    "typescript": "^4.9.5"
   }
 }
